# timing2paprika

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  paprika.py  pyproject.toml  timing.py  timing2paprika.conf  timing2paprika.py
helpers/: paprika.py  pushover.py
