[tool.poetry]
name = "timing2paprika"
version = "0.1.0"
description = ""
authors = ["meska <meskatech@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
sentry-sdk = "^1.37.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
