[tool.poetry]
name = "timing2paprika"
version = "0.1.1"
description = ""
authors = ["meska <meskatech@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
sentry-sdk = "^2.13.0"
python-telegram-bot = "^20.7"
redis = "^5.0.1"
pyotp = "^2.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
